Update home & base map

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <main>
             <section>
                 <input type="text" id="ghMapUrl" placeholder="Enter a github URL (HTTPS / SSH)" />
-                <p><a id="testMapBtnURL" href="#" class="button">Test my github map</a></p>
+                <p><a id="testMapBtnURL" href="#" class="button">Test the github map</a></p>
             </section>
 
             <section>
